eval_outputs/diff_only/code_change/first/google/zero-shot.log
=== RETURN CODE: 1 ===

=== STDOUT ===
SyntaxError: /Users/johndennehy/Documents/Coding/devops-atu-disruptive-devops-assignment/app/e2e/zero-shot.spec.ts: Unexpected token (19:26)

  17 |    await expect(page.locator('h3')).toContainText('Your Notes (2)');
  18 |  
> 19 |    // Click the "Clear all
     |                           ^

   at zero-shot.spec.ts:19

  17 |    await expect(page.locator('h3')).toContainText('Your Notes (2)');
  18 |  
> 19 |    // Click the "Clear all
     |                          ^

Error: No tests found.
Make sure that arguments are regular expressions matching test files.
You may need to escape symbols like "$" or "*" and quote the arguments.

[1A[2K

=== STDERR ===

